--- a/.deploy/values.yaml
+++ b/.deploy/values.yaml
@@ -3,13 +3,14 @@
 # Declare variables to be passed into your templates.
 
 replicaCount: 1
-
+# ghcr.io/n25a/nazri:add-deployments
+# ghcr.io/n25a/nazri:add-deployments
 image:
-  registry: "ghcr.io/"
+  registry: "ghcr.io"
   repository: "n25a/nazri"
   name: ""
   pullPolicy: Always
-  tag: "master"
+  tag: "add-deployments"
 
 imagePullSecrets: []
 nameOverride: ""
