--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -17,24 +17,10 @@ jobs:
         env:
           VERSION: 3.17.3
         with:
-          name: anvari/cmake
+          name: anvari/nazri
           workdir: ubuntu18.04
-          buildargs: VERSION
+          buildargs: latest
           tags: latest, bionic, 3, 3-bionic, 3.17, 3.17-bionic, 3.17.3, 3.17.3-bionic
           username: ${{ secrets.DOCKER_HUB_USERNAME }}
           password: ${{ secrets.DOCKER_HUB_PASSWORD }}
 
-  alpine:
-    runs-on: ubuntu-20.04
-    steps:
-    - uses: actions/checkout@master
-    - uses: elgohr/Publish-Docker-Github-Action@master
-      env:
-        VERSION: 3.17.3
-      with:
-        name: anvari/cmake
-        workdir: alpine3.11
-        buildargs: VERSION
-        tags: alpine, alpine3.11, 3-alpine, 3.17-alpine, 3.17.3-alpine, 3.17.3-alpine3.11
-        username: ${{ secrets.DOCKER_HUB_USERNAME }}
-        password: ${{ secrets.DOCKER_HUB_PASSWORD }}
